; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_euc.c__EUC_KR_mbrtowc.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_euc.c__EUC_KR_mbrtowc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i8*, i64, i32*)* @_EUC_KR_mbrtowc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @_EUC_KR_mbrtowc(i32* noalias %0, i8* noalias %1, i64 %2, i32* noalias %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i64 @_EUC_mbrtowc_impl(i32* %9, i8* %10, i64 %11, i32* %12, i32 0, i32 0, i32 0, i32 0)
  ret i64 %13
}

declare dso_local i64 @_EUC_mbrtowc_impl(i32*, i8*, i64, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
